IdentityFetcherTest: Finish, should succeed within ~ 360 seconds now
As measured with 15 iterations of the test on my 2.4 GHz Core 2 Duo
- pretty nice that such an old CPU can handle 100 nodes, and that it
completes within 6 minutes! :)

Now that this succeeds I will do more test runs to see whether we can
reduce the node count or tweak the node settings to further reduce the
runtime. I will also try to reduce the memory limit, 4 GB was chosen
arbitrarily.

--- a/build.xml
+++ b/build.xml
@@ -197,7 +197,12 @@
 			running them is a very bad idea!"/>
 		
 		<!-- Regular non-benchmark unit tests. -->
-		<junit printsummary="yes" fork="yes" haltonfailure="yes" unless:true="${test.benchmark}">
+		<!-- The 4GB memory limit was chosen for IdentityFetcherTest. FIXME: May work with less.
+		     showoutput was also enabled for that test so you can watch its progress on stdout while
+		     it is still running instead of only getting it shown after it's finished. -->
+		<junit printsummary="yes" fork="yes" haltonfailure="yes" unless:true="${test.benchmark}"
+				maxmemory="4096m" showoutput="yes">
+			
 			<classpath>
 				<path refid="lib.path"/>
 				<pathelement location="${build-test-jar}"/>
