--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,25 @@ addons:
   # TODO: Code quality: Remove this workaround for https://github.com/travis-ci/travis-ci/issues/5227
   hostname: freenet-plugin-WebOfTrust
 
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f  $HOME/.gradle/caches/jars-2/jars-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   apt: true
   directories:
   - $TRAVIS_BUILD_DIR/../fred/
+  - $HOME/.m2
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
 
 before_install:
   - cd "$TRAVIS_BUILD_DIR"/..
   - if [ ! -e fred/src ]; then git clone https://github.com/freenet/fred.git --branch next --single-branch fred ; else cd fred ; git pull ; cd .. ; fi
-  - if [ ! -e fred/lib/bcprov-jdk15on-154.jar ]; then cd fred/lib ; wget -c --no-check-certificate https://bouncycastle.org/download/bcprov-jdk15on-154.jar; cd ../.. ; fi
-  - cd fred/lib ; rm -f bcprov.jar ; ln -s bcprov-jdk15on-154.jar bcprov.jar ; cd ../..
-  - cd fred && ant clean && ant -Dlib.contrib.get=true -Dtest.skip=true && cd ..
+  - cd fred
+  - echo -e "org.gradle.parallel = true\norg.gradle.jvmargs=-Xms256m -Xmx1024m\norg.gradle.configureondemand=true\ntasks.withType(Test) {\n maxParallelForks = Runtime.runtime.availableProcessors()\n}" > gradle.properties
+  - ./gradlew clean && ./gradlew jar -x test && cd ..
   - cd "$TRAVIS_BUILD_DIR"
 
 script: ant
