Travis CI: Fix to create missing directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
   - gradle clean && gradle jar -x test
   # Create symlink to JARs in the places where they used to be with the old
   # Ant builder so WoT finds them.
-  - cd dist && ln -s ../build/libs/freenet.jar && cd ..
+  - mkdir dist && cd dist && ln -s ../build/libs/freenet.jar && cd ..
   - cd lib && mkdir freenet && cd freenet && ln -s ../freenet-ext.jar && cd ../..
   - cd "$TRAVIS_BUILD_DIR"
 
