--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
   # Create symlink to JARs in the places where they used to be with the old
   # Ant builder so WoT finds them.
   - mkdir dist && cd dist && ln -s ../build/libs/freenet.jar && cd ..
-  - cd lib && mkdir freenet && cd freenet && ln -s ../freenet-ext.jar && cd ../..
+  - cd lib/freenet && ln -s ../freenet-ext.jar && cd ../..
   - cd "$TRAVIS_BUILD_DIR"
 
 script: ant
