--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ before_install:
   - gradle clean && gradle jar -x test
   # Create symlink to JARs in the places where they used to be with the old
   # Ant builder so WoT finds them.
-  - [ -e dist/freenet.jar ] || ( mkdir -p dist && cd dist && ln -s ../build/libs/freenet.jar && cd .. )
-  - [ -e lib/freenet/freenet-ext.jar ] || ( cd lib/freenet && ln -s ../freenet-ext.jar && cd ../.. )
+  - if [ ! -e dist/freenet.jar ]; then mkdir -p dist && cd dist && ln -s ../build/libs/freenet.jar && cd .. ; fi
+  - if [ ! -e lib/freenet/freenet-ext.jar ]; then cd lib/freenet && ln -s ../freenet-ext.jar && cd ../.. ; fi
   - cd "$TRAVIS_BUILD_DIR"
   # Print the checksums of the WoT dependencies - for debugging
   - sha256sum ../fred/dist/freenet.jar
