Travis CI: Get rid of compiling for OracleJDK 7, not supported anymore

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,5 +49,6 @@ script: ant
 
 jdk:
   - oraclejdk8
-  - oraclejdk7
+  # Not supported anymore I guess: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
+  # - oraclejdk7
   - openjdk7
