Travis CI / Ant builder: Fix unit test failures by linking against JNA JAR which fred nowadays requires

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,13 @@ before_install:
   # FIXME: Code quality: How to obtain these two paths in a clean way without hardcoding them?
   - if [ ! -e lib/bcprov.jar ]; then mkdir -p lib && cd lib && ln -s $HOME/.gradle/caches/modules-2/files-2.1/org.bouncycastle/bcprov-jdk15on/1.57/*/bcprov-jdk15on-1.57.jar bcprov.jar && cd .. ; fi
   - if [ ! -e lib/freenet/freenet-ext.jar ]; then mkdir -p lib/freenet && cd lib/freenet && ln -s $HOME/.gradle/caches/modules-2/files-2.1/org.freenetproject/freenet-ext/29/*/freenet-ext-29.jar freenet-ext.jar && cd ../.. ; fi
+  - if [ ! -e lib/jna.jar ]; then mkdir -p lib && cd lib && ln -s $HOME/.gradle/caches/modules-2/files-2.1/net.java.dev.jna/jna/4.2.2/*/jna-4.2.2.jar jna.jar && cd .. ; fi
   - cd "$TRAVIS_BUILD_DIR"
   # Print the checksums of the WoT dependencies - for debugging
   - sha256sum ../fred/dist/freenet.jar
   - sha256sum ../fred/lib/freenet/freenet-ext.jar
   - sha256sum ../fred/lib/bcprov.jar
+  - sha256sum ../fred/lib/jna.jar
 
 script: ant
 
