--- a/build.xml
+++ b/build.xml
@@ -200,11 +200,14 @@
 			running them is a very bad idea!"/>
 		
 		<!-- Regular non-benchmark unit tests. -->
-		<!-- The 4GB memory limit was chosen for IdentityFetcherTest. FIXME: May work with less.
-		     showoutput was also enabled for that test so you can watch its progress on stdout while
-		     it is still running instead of only getting it shown after it's finished. -->
+		<!-- The 512 MB memory limit was determined by running ~ 10 iterations of the tests as of
+		     git describe == build0019-236-gfaf9fdb with 4GB, 512 MB, 384 MB and 256 MB. The runtime
+		     average wasn't significantly different for any of those so there is no excessive GCing
+		     happening and 512 MB should be enough for now and leave some leeway for new tests.
+		     showoutput was enabled for IdentityFetcherTest so you can watch its progress on stdout
+		     while it is still running instead of only getting it shown after it's finished. -->
 		<junit printsummary="yes" fork="yes" haltonfailure="yes" unless:true="${test.benchmark}"
-				maxmemory="4096m" showoutput="yes">
+				maxmemory="512m" showoutput="yes">
 			
 			<classpath>
 				<path refid="lib.path"/>
