Temporarily disable Travis CI on this branch, unit tests are not intended to work currently
Source: https://docs.travis-ci.com/user/customizing-the-build/

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+# FIXME: Re-enable once the branch is finished
+branches:
+	except:
+		- issue-0003816-IdentityFetcher-rewrite
+
 language: java
 
 # We need Ubuntu 14.04 due to very new JUnit API which WoT needs
