--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,9 @@ before_install:
 script: ant
 
 jdk:
+  - oraclejdk9
   - oraclejdk8
-  # Not supported anymore I guess: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
-  # - oraclejdk7
+  - openjdk8
   - openjdk7
+  # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
+  # openjdk9: As of 2018-05-12 isn't available on Travis yet.
