--- a/build.xml
+++ b/build.xml
@@ -3,11 +3,11 @@
 
 <project name="WoT" default="dist" basedir="." xmlns:if="ant:if" xmlns:unless="ant:unless">
 	<property file="override.properties"/>
-
 	<property name="freenet-cvs-snapshot.location" location="../fred/dist/freenet.jar"/>
 	<property name="freenet-ext.location" location="../fred/lib/freenet/freenet-ext.jar"/>
 	<property name="bcprov.location" location="../fred/lib/bcprov.jar"/>
 	<property name="jna.location" location="../fred/lib/jna.jar"/>
+	<property name="jna-platform.location" location="../fred/lib/jna-platform.jar"/>
 	<property name="debug-node-wot-plugin.location" location="../fred/plugins/WebOfTrust.jar"/>
 	<property name="svn.revision" value="@custom@"/>
 	<property name="source-version" value="1.7"/>
@@ -33,6 +33,7 @@
 
 	<path id="lib.path">
 		<pathelement location="${bcprov.location}"/>
+		<pathelement location="${jna-platform.location}"/>
 		<pathelement location="${jna.location}"/>
 		<pathelement location="${freenet-ext.location}"/>
 		<pathelement location="${freenet-cvs-snapshot.location}"/>
@@ -85,6 +86,7 @@
 		<echo message="Using ${freenet-ext.location} as freenet-ext.jar"/>
 		<echo message="Using ${bcprov.location} as bcprov.jar"/>
 		<echo message="Using ${jna.location} as jna.jar"/>
+		<echo message="Using ${jna-platform.location} as jna-platform.jar"/>
 		<echo message="Using ${cobertura.location} as cobertura.jar"/>
 	</target>
 
