Travis CI: Use Gradle wrapper to fix failure on Oracle Java 9
Gradle would fail with:
    "Could not determine java version from '9.0.1'."

That's because the Gradle which Travis CI deploys is too old for Java 9:
https://github.com/travis-ci/travis-ci/issues/8975
(Stangely it did work with Java 9 some time ago when I filed the fred
PR we recently discussed, I don't know what they changed since.)

The Gradle wrapper will download the latest Gradle and thereby fix this.

In turn OpenJDK 7 is disabled because it doesn't work with the wrapper
anymore.
(I do still think it's not good that we don't test on Java 7 as that's
what we officially require for fred and what Ubuntu 14.04 deploys;
however testing on newer versions should be preferred to testing on
older versions.
That conflict didn't exist when I filed the aforementioned fred PR to
support Java 7. Now that Java 7 is in conflict with 9 I agree that it's
better to prefer testing with 9.)

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - echo -e "org.gradle.parallel = true\norg.gradle.jvmargs=-Xms256m -Xmx1024m\norg.gradle.configureondemand=true\ntasks.withType(Test) {\n maxParallelForks = Runtime.runtime.availableProcessors()\n}" > gradle.properties
   # "copyRuntimeLibs" copies the JAR *and* dependencies - which WoT also
   # needs - to build/output/
-  - gradle clean jar copyRuntimeLibs -x test
+  - ./gradlew clean jar copyRuntimeLibs -x test
   # Create symlink to JARs in the places where they used to be with the old
   # fred Ant builder so WoT finds them and we can keep WoT's Ant
   # builder compatible with old fred releases for now.
@@ -58,6 +58,6 @@ jdk:
   - oraclejdk9
   - oraclejdk8
   - openjdk8
-  - openjdk7
-  # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
   # openjdk9: As of 2018-05-12 isn't available on Travis yet.
+  # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
+  # openjdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/8503
