--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,12 @@ before_install:
   - if [ ! -e fred/src ]; then git clone https://github.com/freenet/fred.git --branch next --single-branch --depth 1 fred ; else cd fred ; git pull ; cd .. ; fi
   - cd fred
   - echo -e "org.gradle.parallel = true\norg.gradle.jvmargs=-Xms256m -Xmx1024m\norg.gradle.configureondemand=true\ntasks.withType(Test) {\n maxParallelForks = Runtime.runtime.availableProcessors()\n}" > gradle.properties
+  # TODO: freenet.jar won't contain class Version if we don't run the
+  # clean task in a separate execution of Gradle. Why?
+  - ./gradlew clean
   # "copyRuntimeLibs" copies the JAR *and* dependencies - which WoT also
   # needs - to build/output/
-  - ./gradlew clean jar copyRuntimeLibs -x test
+  - ./gradlew jar copyRuntimeLibs -x test
   # Create symlink to JARs in the places where they used to be with the old
   # fred Ant builder so WoT finds them and we can keep WoT's Ant
   # builder compatible with old fred releases for now.
