Travis CI: Fix "sudo: unable to resolve host freenet-plugin-WebOfTrust"
The link cited in the nearby line from which the "hostname" workaround
came did mention configuring the hosts file like this as well:
https://github.com/travis-ci/travis-ci/issues/5227#issuecomment-165131913

I probably forgot to apply that part when I applied the workaround
initially.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ addons:
     - junit4
     - libhamcrest-java
   # TODO: Code quality: Remove this workaround for https://github.com/travis-ci/travis-ci/issues/5227
+  hosts:
+    - freenet-plugin-WebOfTrust
   hostname: freenet-plugin-WebOfTrust
 
 before_cache:
