--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: java
 
 # We need Ubuntu 14.04 due to very new JUnit API which WoT needs
-sudo: required
 dist: trusty
+# Disabling sudo routes the build to a Docker container instead of a VM
+# which speeds up the build.
+sudo: false
 
 addons:
   apt:
