Ant builder: Pass javac source/target version to db4o builder

--- a/build.xml
+++ b/build.xml
@@ -90,7 +90,10 @@
 	</target>
 
 	<target name="db4o" depends="get-submodules" description="Compiles the database submodule">
-		<ant dir="${db4o-submodule.location}" inheritAll="false" useNativeBasedir="true"/>
+		<ant dir="${db4o-submodule.location}" inheritAll="false" useNativeBasedir="true">
+			<property name="javac.source.version" value="${source-version}"/>
+			<property name="javac.target.version" value="${target-version}"/>
+		</ant>
 	</target>
 
 	<target name="clean-db4o" depends="get-submodules" description="Cleans the database submodule">
