--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,21 @@
 <!-- ant build file for WoT -->
 
 <project name="WoT" default="dist" basedir="." xmlns:if="ant:if" xmlns:unless="ant:unless">
+	<!-- You can use these file to override the below properties. -->
 	<property file="override.properties"/>
-	<property name="db4o-submodule.location" location="db4o-7.4"/>
-	<property name="db4o.location" location="${db4o-submodule.location}/db4o.jar"/>
+	<!-- Dependencies. These are the most important to configure! -->
 	<property name="freenet-cvs-snapshot.location" location="../fred/dist/freenet.jar"/>
 	<property name="freenet-ext.location" location="../fred/lib/freenet/freenet-ext.jar"/>
 	<property name="bcprov.location" location="../fred/lib/bcprov.jar"/>
 	<property name="jna.location" location="../fred/lib/jna.jar"/>
 	<property name="jna-platform.location" location="../fred/lib/jna-platform.jar"/>
+	<property name="junit.location" value="/usr/share/java/junit4.jar"/>
+	<property name="hamcrest.location" value="/usr/share/java/hamcrest-core.jar"/>
+	<property name="cobertura.location" value="/usr/share/java/cobertura.jar"/>
+	
+	<!-- Configuration which you should probably leave alone. -->
+	<property name="db4o-submodule.location" location="db4o-7.4"/>
+	<property name="db4o.location" location="${db4o-submodule.location}/db4o.jar"/>
 	<property name="debug-node-wot-plugin.location" location="../fred/plugins/WebOfTrust.jar"/>
 	<property name="svn.revision" value="@custom@"/>
 	<property name="source-version" value="7"/>
@@ -21,9 +28,6 @@
 	<property name="dist" location="dist/"/>
 	<property name="src" location="src/"/>
 	<property name="javadoc" location="javadoc/"/>
-	<property name="junit.location" value="/usr/share/java/junit4.jar"/>
-	<property name="hamcrest.location" value="/usr/share/java/hamcrest-core.jar"/>
-	<property name="cobertura.location" value="/usr/share/java/cobertura.jar"/>
 	<property name="version.src" value="plugins/WebOfTrust/Version.java" />
 	<property name="version.build" value="plugins/WebOfTrust/Version.class" />
 
