--- a/build.xml
+++ b/build.xml
@@ -8,12 +8,19 @@
 		
 	<!-- You can use these file to override the below properties. -->
 	<property file="override.properties"/>
-	<!-- Dependencies. These are the most important to configure! -->
-	<property name="freenet-cvs-snapshot.location" location="../fred/dist/freenet.jar"/>
-	<property name="freenet-ext.location" location="../fred/lib/freenet/freenet-ext.jar"/>
-	<property name="bcprov.location" location="../fred/lib/bcprov.jar"/>
-	<property name="jna.location" location="../fred/lib/jna.jar"/>
-	<property name="jna-platform.location" location="../fred/lib/jna-platform.jar"/>
+	<!-- Dependencies. These are the most important to configure!                               -->
+	<!--                                                                                        -->
+	<!-- Freenet build01481 compiled with "./gradlew jar copyRuntimeLibs" will copy the         -->
+	<!-- freenet.jar and its dependencies to this directory:                                    -->
+	<property name="freenet.lib.new.location"   location="../fred/build/output/"/>
+	<!-- Older Freenet builds will use these places for the JARs, some of which have to be      -->
+	<!-- downloaded manually:                                                                   -->
+	<property name="freenet.lib.old.location.1" location="../fred/lib/bcprov.jar"/>
+	<property name="freenet.lib.old.location.2" location="../fred/lib/jna-platform.jar"/>
+	<property name="freenet.lib.old.location.3" location="../fred/lib/jna.jar"/>
+	<property name="freenet.lib.old.location.4" location="../fred/lib/freenet/freenet-ext.jar"/>
+	<property name="freenet.lib.old.location.5" location="../fred/dist/freenet.jar"/>
+	<!-- Unit test dependencies                                                                 -->
 	<property name="junit.location" value="/usr/share/java/junit4.jar"/>
 	<property name="hamcrest.location" value="/usr/share/java/hamcrest-core.jar"/>
 	<property name="cobertura.location" value="/usr/share/java/cobertura.jar"/>
@@ -57,15 +64,23 @@
 	</path>
 	<!-- Libraries which we get from fred. -->
 	<path id="lib.path">
-		<pathelement location="${bcprov.location}"/>
-		<pathelement location="${jna-platform.location}"/>
-		<pathelement location="${jna.location}"/>
-		<pathelement location="${freenet-ext.location}"/>
-		<pathelement location="${freenet-cvs-snapshot.location}"/>
+		<pathelement location="${freenet.lib.new.location}"/>
+		<pathelement location="${freenet.lib.old.location.1}"/>
+		<pathelement location="${freenet.lib.old.location.2}"/>
+		<pathelement location="${freenet.lib.old.location.3}"/>
+		<pathelement location="${freenet.lib.old.location.4}"/>
+		<pathelement location="${freenet.lib.old.location.5}"/>
 	</path>
 
 	<path id="cobertura.path">
 		<pathelement location="${cobertura.location}"/>
+	</path>
+	
+	<path id="lib.external.all.path">
+		<path refid="lib.path"/>
+		<pathelement location="${junit.location}"/>
+		<pathelement location="${hamcrest.location}"/>
+		<path refid="cobertura.path"/>
 	</path>
 
 	<presetdef name="javac">
@@ -119,23 +134,26 @@
 			useNativeBasedir="true"/>
 	</target>
 
+
+	<target name="print-libs">
+		<pathconvert refid="lib.external.all.path" pathsep="${line.separator}" property="all.path.printable"/>
+		<echo>External libraries on classpath - please ensure they exist:</echo>
+		<echo>- For the fred libs either fred/build/output/ should contain all of them (use</echo>
+		<echo>  "./gradlew jar copyRuntimeLibs") or their old pre-build01481 filenames below</echo>
+		<echo>  it should be valid.</echo>
+		<echo>${all.path.printable}</echo>
+	</target>
+
 	<target name="mkdir">
 		<mkdir dir="${build}"/>
 		<mkdir dir="${build-test}"/>
 		<mkdir dir="${build-test}/test"/>
 		<mkdir dir="${build-test-coverage}"/>
 		<mkdir dir="${dist}"/>
-		<echo message="Using ${db4o.location} as db4o.jar"/>
-		<echo message="Using ${freenet-cvs-snapshot.location} as freenet-cvs-snapshot.jar"/>
-		<echo message="Using ${freenet-ext.location} as freenet-ext.jar"/>
-		<echo message="Using ${bcprov.location} as bcprov.jar"/>
-		<echo message="Using ${jna.location} as jna.jar"/>
-		<echo message="Using ${jna-platform.location} as jna-platform.jar"/>
-		<echo message="Using ${cobertura.location} as cobertura.jar"/>
 	</target>
 
 	<!-- ================================================== -->
-	<target name="compile" depends="db4o, mkdir" >
+	<target name="compile" depends="print-libs, db4o, mkdir">
 		<!-- Create the time stamp -->
 		<tstamp/>
 
