Ant builder: Fix JAR discovery for directory fred/build/output/
I hadn't noticed this failing by the Travis CI build for commit
e081cb54f3297edc09a6dddc9cb41be02c8882e4 because I forgot to delete the
Travis CI build cache, which had resulted in Travis still caching the
old locations of the JARs.
Sorry.

The <fileset> approach hereby chosen will NOT list anything in the path
if the JARs don't exist which is why the "it" is removed in the
print-libs task.

--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,9 @@
 	</path>
 	<!-- Libraries which we get from fred. -->
 	<path id="lib.path">
-		<pathelement location="${freenet.lib.new.location}"/>
+		<fileset dir="${freenet.lib.new.location}" casesensitive="no">
+			<include name="**/*.jar"/>
+		</fileset>
 		<pathelement location="${freenet.lib.old.location.1}"/>
 		<pathelement location="${freenet.lib.old.location.2}"/>
 		<pathelement location="${freenet.lib.old.location.3}"/>
@@ -143,7 +145,7 @@
 		<echo>External libraries on classpath - please ensure they exist:</echo>
 		<echo>- For the fred libs either fred/build/output/ should contain all of them (use</echo>
 		<echo>  "./gradlew jar copyRuntimeLibs") or their old pre-build01481 filenames below</echo>
-		<echo>  it should be valid.</echo>
+		<echo>  should be valid.</echo>
 		<echo>${all.path.printable}</echo>
 	</target>
 
